--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,12 @@ jobs:
 
       - name: 📁 Copy files to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -r . ubuntu@${{ secrets.EC2_HOST }}:/home/ec2-user/app/
+          scp -o StrictHostKeyChecking=no -r . ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/app/
 
       - name: 🐳 Docker Compose Up
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "
-            cd /home/ec2-user/app &&
+            cd /home/ubuntu/app &&
             docker-compose down &&
             docker-compose up -d --build
           "
