--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy App
+name: 🚀 Deploy App
 
 on:
   push:
@@ -9,21 +9,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: ✅ Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up SSH
+      - name: 🔐 Set up SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: 🔐 Write .env file
-        run: echo "${{ secrets.ENV_FILE }}" > .env
-
-      - name: 📁 Copy files to EC2
+      - name: 📁 Create target dir on EC2
         run: |
-          scp -o StrictHostKeyChecking=no -r . ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/app/
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "mkdir -p /home/ubuntu/app"
+
+      - name: 🗂️ Copy necessary files to EC2
+        run: |
+          scp -o StrictHostKeyChecking=no -r \
+            docker-compose.yml \
+            Dockerfile \
+            plugins \
+            register-mysql-sink.json \
+            ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/app/
+
+      - name: 🔐 Write .env on EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "
+            echo '${{ secrets.ENV_FILE }}' > /home/ubuntu/app/.env
+          "
 
       - name: 🐳 Docker Compose Up
         run: |
