--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,15 @@ jobs:
 
       - name: 📦 Zip deployment package
         run: |
-          zip -r kafka-coupon-deploy.zip appspec.yml scripts/ kafka-coupon/
+          cd kafka-coupon
+          mkdir bundle
+          cp -r ../appspec.yml ../scripts/ . ./bundle/
+          cd bundle
+          zip -r ../kafka-coupon-deploy.zip .
 
       - name: ☁️ Upload to S3
         run: |
-          aws s3 cp kafka-coupon-deploy.zip s3://$S3_BUCKET_NAME/
+          aws s3 cp kafka-coupon/kafka-coupon-deploy.zip s3://$S3_BUCKET_NAME/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
